--- a/src/component/pages/topic/topic.module.less
+++ b/src/component/pages/topic/topic.module.less
@@ -1,8 +1,9 @@
 .box {
   display: flex;
-  margin: 0 8rem 0 8rem;
+  margin: 0 auto;
   padding-top: 1rem;
   gap: @padding-xs;
+  width: 1000px;
 
   .content {
     flex: 4;
