--- a/src/component/module/appBar/appBar.module.less
+++ b/src/component/module/appBar/appBar.module.less
@@ -102,6 +102,7 @@
 
 // 头像菜单
 .avatartMenu {
+  transition: all ease 0.3s;
   display: flex;
   gap: @padding-xs;
   flex-direction: column;
@@ -113,13 +114,26 @@
   color: @text-color;
   border-radius: @padding-xs;
   top: 3.5rem;
+  opacity: 0;
+  visibility: hidden;
 
   .item {
     display: flex;
     justify-content: center;
     list-style: none;
     min-width: 4rem;
+
+    &:hover {
+      cursor: pointer;
+      color: fade(@text-color, 85%);
+    }
   }
+}
+
+.avatartMenuOpen {
+  transition: all ease 0.3s;
+  opacity: 1;
+  visibility: visible;
 }
 
 .loginCon {
@@ -157,28 +171,29 @@
   opacity: 0;
   visibility: hidden;
 
-  background-size: 90%;
+  background-size: 100%;
   background-image: url("/public/img/bg.jpg");
-  animation: bgScroll 60s linear infinite;
+  animation: bgScroll 190s linear infinite;
 }
 
 .content {
   transition: all cubic-bezier(0, 1.13, 0.36, 0.99) 0.3s;
   transform: translate(1000px) scale(0);
 
-  background-color: white;
+  background: white;
   border-radius: 1rem;
   width: 20rem;
   padding: 1rem 2rem 4rem 2rem;
   opacity: 0;
   visibility: hidden;
+  border: 4px @primary-color solid;
 
   @media screen and (max-width: @tab-let) {
-    transform: scale(0.7) !important;
+    transform: scale(0.5) !important;
   }
 
   @media screen and (max-width: @mob-l) {
-    transform: scale(0.5) !important;
+    transform: scale(0.2) !important;
   }
 
   .head {
@@ -304,6 +319,7 @@
 }
 
 .slideFormStart {
+  height: 8rem;
   .slideLeft {
     transform: translateX(0);
     transition: all cubic-bezier(0, 1.13, 0.36, 0.99) 0.3s;
@@ -314,6 +330,7 @@
   }
 }
 .slideFormEnd {
+  height: 100%;
   .slideLeft {
     transform: translateX(-16rem);
     transition: all cubic-bezier(0, 1.13, 0.36, 0.99) 0.3s;
@@ -347,7 +364,6 @@
 .regInput {
   display: flex;
   gap: @padding-xs;
-  align-items: center;
 
   div[class="ant-form-item css-dev-only-do-not-override-1ykcyly"] {
     margin-bottom: 0;
@@ -359,6 +375,6 @@
     background-position: 0px 0px;
   }
   100% {
-    background-position: 0px calc(-768px / 0.1);
+    background-position: 0px calc(-1280px / 0.1);
   }
 }
